# time-travel

./: .gitignore  README.md
linux/: CMakeLists.txt
src/: Character.cpp  Character.h  Chunk.h  GameState.cpp  GameState.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  main.cpp
src/renderer/: Renderer.cpp  Renderer.h  utils.cpp  utils.h
src/scenes/: GameScene.cpp  GameScene.h  PauseMenuScene.cpp  PauseMenuScene.h  Scene.h
src/shaders/: fullscreen.vert  healthbar.frag  healthbar.vert  simple.frag  text.frag  vignette.frag
